footer spacing, fix hamburger, spreads list to single column

--- a/_sass/_general.sass
+++ b/_sass/_general.sass
@@ -40,9 +40,6 @@ a
 img
   border-radius: 0.25rem
 
-.two-column-list
-  columns: 2 auto
-
 .article-list
   .article
     display: flex
@@ -189,7 +186,7 @@ footer
   .hamburger
     display: block
     position: absolute
-    top: 1rem
+    top: 1.75rem
     left: 5%
     right: 0
     margin-right: -2rem
@@ -243,9 +240,9 @@ footer
         position: relative
         text-decoration: none
         color: $white
-        font-size: 2rem
+        font-size: 1.5rem
         display: block
-        margin-top: 1.25em
+        margin-top: 1em
         &:hover
           color: $white
 
